# sat_solver

./: LICENSE  README.md  dune-project
lib/: dpll.ml  dune  formula.ml  satlib.ml
test/: dune
