(lang dune 3.18)

(name sat_solver)

(generate_opam_files true)

(package
 (name sat_solver)
 (synopsis "A sat solver")
 (description "A sat solver")
 (depends ocaml)
 (tags
  ("sat" "ocaml" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
